# no-doze

./: .gitignore  LICENSE  README.md  install.sh  no-doze.service  no_doze.py  no_doze_client.py  no_dozed.py  pyproject.toml  requirements.txt
.run/: no_dozed.run.xml
client/: inhibiting_condition.py  inhibiting_condition_registrar.py  no_doze_client.py
common/: config_provider.py
common/message/: messages.py  transform.py
core/: config_provider.py  inhibiting_condition.py  inhibiting_condition_registrar.py  priority_queue.py  sleep_inhibitor.py
core/common/message/: transform.py
core/server/: no_dozed.py  server.py
no_doze/: config_provider.py  inhibiting_process.py  no_doze.py
no_doze/sleep_inhibitor/implementations/: plex.py  test_plex.py  (+1 more)
plugin/: active_process.py  plex.py  qbittorrent.py  sshd.py
resources/: client_config.yaml  config.yml  daemon_config.yml  export_requirements.sh  install_locations.yml  no-doze-client.yml  no-dozed.yml  requirements.txt
scripts/: create_release.py  generate_dbus_wrappers.sh  install  no-doze-client.service  no-doze.service  no-dozed.service  uninstall
server/: no_dozed.py  org_freedesktop_login1.py  scheduled_inhibition.py  sleep_inhibitor.py  sleep_watcher.py
src/: __init__.py  config_provider.py  inhibiting_condition_registrar.py  inhibiting_process_registrar.py  no_doze.py  no_doze_test.py  priority_queue.py  sleep_inhibitor.py  test_priority_queue.py
src/condition/: inhibiting_condition.py
src/resources/: config.yml
src/trigger/: inhibiting_condition.py  inhibiting_process.py
test/: test_config_provider.py  test_no_doze.py  test_no_doze_client.py  test_no_dozed.py  test_priority_queue.py
test/client/: test_condtions.py  test_no_doze_client.py
test/common/: test_config_provider.py  test_transform.py
test/condition/: test_plex.py  test_qbittorrent.py
test/core/: test_config_provider.py  test_no_dozed.py  test_priority_queue.py
test/plugin/: test_condtions.py
test/scripts/: Dockerfile  docker_build.sh  docker_run.sh
test/server/: test_scheduled_inhibition.py  test_sleep_watcher.py
(+18 files in other folders)
