[tool.poetry]
name = "no-doze"
version = "0.1.0"
description = "\"Delays a Linux computer form sleeping while certain processes are occurring, such as streaming a video to a client\""
authors = ["Eric Gha <eric@ericgha.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "core" }, {include = "plugin"}, {include = "test"} ]
include = ["no_doze.py", "resources/config.yml", "scripts/", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
PlexAPI = "^4.13.4"
qbittorrent-api = "^2023.4.47"
dbus-python = "^1.3.2"

[tool.poetry.group.extras.dependencies]
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
