[tool.poetry]
name = "no-doze"
version = "0.2.0-rc1"
description = "Delays a Linux computer from sleeping while certain processes are occurring, such as streaming a video to a client"
authors = ["Eric Gha <eric@ericgha.com>"]
license = "MIT"
readme = "README.md"
include = ["no_dozed.py", "no_doze_client.py", "resources/client_config.yml", "resources/daemon_config.yml", "scripts/",
    ]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
PlexAPI = "^4.13.4"
qbittorrent-api = "^2023.4.47"
dbus-python = "^1.3.2"

[tool.poetry.extras]
testing = ["coverage"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
